fix(input): fix clearButton alignment when input height greater than default.

--- a/projects/truly-ui/src/components/input/input-theme.scss
+++ b/projects/truly-ui/src/components/input/input-theme.scss
@@ -33,6 +33,11 @@
         color: map-deep-get($basic, "default", "foreground");
       }
     }
+
+    .-clearbutton {
+      color: map-deep-get($light, "default", "foreground");
+    }
+
     .label {
       color: map-deep-get($basic, "default", "foreground");
       &.-validation {
